# benchmarks

./: .gitignore  Cargo.toml  README.md  RESULTS.md  config.yaml  schema.graphql
resources/: best_results.rs  runner.rs
source/: index.html  package-lock.json  package.json  vite.config.ts
source/src/: App.tsx  index.css
tests/: Cargo.toml
tests/src/: lib.rs
